[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Visual Basic/AXDev.bas


' 지정 축의 Sensor 신호의 사용 유무 및 신호 입력 레벨을 설정한다.
' 사용 유무 LOW Lib "AXL.dll" (0), HIGH Lib "AXL.dll" (1), UNUSED Lib "AXL.dll" (2), USED Lib "AXL.dll" (3)
Public Declare Function AxmSensorSetSignal Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uLevel As Long) As Long
' 지정 축의 Sensor 신호의 사용 유무 및 신호 입력 레벨을 반환한다.
Public Declare Function AxmSensorGetSignal Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upLevel As Long) As Long
' 지정 축의 Sensor 신호의 입력 상태를 반환한다
Public Declare Function AxmSensorReadSignal Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upStatus As Long) As Long

' 지정 축의 설정된 속도와 가속율로 센서 위치 드라이버를 구동한다.
' Sensor 신호의 Active level입력 이후 상대 좌표로 설정된 거리만큼 구동후 정지한다.
' 펄스가 출력되는 시점에서 함수를 벗어난다.
' lMethod :  0 - 일반 구동, 1 - 센서 신호 검출 전은 저속 구동. 신호 검출 후 일반 구동
'            2 - 저속 구동
Public Declare Function AxmSensorMovePos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lMethod As Long) As Long

' 지정 축의 설정된 속도와 가속율로 센서 위치 드라이버를 구동한다.
' Sensor 신호의 Active level입력 이후 상대 좌표로 설정된 거리만큼 구동후 정지한다.
' 펄스 출력이 종료되는 시점에서 함수를 벗어난다.
Public Declare Function AxmSensorStartMovePos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal lMethod As Long) As Long

' 원점검색 진행스탭 변화의 기록을 반환한다.
' lpStepCount      : 기록된 Step의 개수
' upMainStepNumber : 기록된 MainStepNumber 정보의 배열포인트
' upStepNumber     : 기록된 StepNumber 정보의 배열포인트
' upStepBranch     : 기록된 Step별 Branch 정보의 배열포인트
' 주의: 배열개수는 50개로 고정
Public Declare Function AxmHomeGetStepTrace Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef lpStepCount As Long, ByRef upMainStepNumber As Long, ByRef upStepNumber As Long, ByRef upStepBranch As Long) As Long

'=======추가 홈 서치  Lib "AXL.dll" (PI-N804/404에만 해당됨.)=================================================================================
' 사용자가 지정한 축의 홈설정 파라메타를 설정한다. Lib "AXL.dll" (QI칩 전용 레지스터 이용).
' uZphasCount : 홈 완료후에 Z상 카운트 Lib "AXL.dll" (0 - 15)
' lHomeMode   : 홈 설정 모드 Lib "AXL.dll" ( 0 - 12)
' lClearSet   : 위치 클리어 , 잔여펄스 클리어 사용 선택  Lib "AXL.dll" (0 - 3)
'               0: 위치클리어 사용않함, 잔여펄스 클리어 사용 안함
'               1: 위치클리어 사용함, 잔여펄스 클리어 사용 안함
'               2: 위치클리어 사용안함, 잔여펄스 클리어 사용함
'               3: 위치클리어 사용함, 잔여펄스 클리어 사용함.
' dOrgVel : 홈관련 Org  Speed 설정
' dLastVel: 홈관련 Last Speed 설정
Public Declare Function AxmHomeSetConfig Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uZphasCount As Long, ByVal lHomeMode As Long, ByVal lClearSet As Long, ByVal dOrgVel As Double, ByVal dLastVel As Double, ByVal dLeavePos As Double) As Long
' 사용자가 지정한 축의 홈설정 파라메타를 반환한다.
Public Declare Function AxmHomeGetConfig Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upZphasCount As Long, ByRef lpHomeMode As Long, ByRef lpClearSet As Long, ByRef dpOrgVel As Double, ByRef dpLastVel As Double, ByRef dpLeavePos As Double) As Long

' 사용자가 지정한 축의 홈 서치를 시작한다.
' lHomeMode 사용시 설정 : 0 - 5 설정  Lib "AXL.dll" (Move Return후에 Search를  시작한다.)
' lHomeMode -1로 그대로 사용시 HomeConfig에서 사용한대로 그대로 설정됨.
' 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
Public Declare Function AxmHomeSetMoveSearch Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

' 사용자가 지정한 축의 홈 리턴을 시작한다.
' lHomeMode 사용시 설정 : 0 - 12 설정
' lHomeMode -1로 그대로 사용시 HomeConfig에서 사용한대로 그대로 설정됨.
' 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
Public Declare Function AxmHomeSetMoveReturn Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

' 사용자가 지정한 축의 홈 이탈을 시작한다.
' 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
Public Declare Function AxmHomeSetMoveLeave Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

' 사용자가 지정한 다축의 홈 서치을 시작한다.
' lHomeMode 사용시 설정 : 0 - 5 설정  Lib "AXL.dll" (Move Return후에 Search를  시작한다.)
' lHomeMode -1로 그대로 사용시 HomeConfig에서 사용한대로 그대로 설정됨.
' 구동방향      : Vel값이 양수이면 CW, 음수이면 CCW.
Public Declare Function AxmHomeSetMultiMoveSearch Lib "AXL.dll" (ByVal lArraySize As Long, ByRef lpAxesNo As Long, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double) As Long

'지정된 좌표계의 구동 속도 프로파일 모드를 설정한다.
'  Lib "AXL.dll" (주의점 : 반드시 축맵핑 하고 사용가능)
' ProfileMode : '0' - 대칭 Trapezode
'               '1' - 비대칭 Trapezode
'               '2' - 대칭 Quasi-S Curve
'               '3' - 대칭 S Curve
'               '4' - 비대칭 S Curve
Public Declare Function AxmContiSetProfileMode Lib "AXL.dll" (ByVal lCoord As Long, ByVal uProfileMode As Long) As Long
' 지정된 좌표계의 구동 속도 프로파일 모드를 반환한다.
Public Declare Function AxmContiGetProfileMode Lib "AXL.dll" (ByVal lCoord As Long, ByRef upProfileMode As Long) As Long

'========== DIO 인터럽트 플래그 레지스트 읽기
' 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 bit 단위로 인터럽트 발생 상태 값을 읽음
Public Declare Function AxdiInterruptFlagReadBit Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long
' 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 byte 단위로 인터럽트 발생 상태 값을 읽음
Public Declare Function AxdiInterruptFlagReadByte Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long
' 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 word 단위로 인터럽트 발생 상태 값을 읽음
Public Declare Function AxdiInterruptFlagReadWord Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long
' 지정한 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 double word 단위로 인터럽트 발생 상태 값을 읽음
Public Declare Function AxdiInterruptFlagReadDword Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lOffset As Long, ByRef upValue As Long) As Long
' 전체 입력 접점 모듈, Interrupt Flag Register의 Offset 위치에서 bit 단위로 인터럽트 발생 상태 값을 읽음
Public Declare Function AxdiInterruptFlagRead Lib "AXL.dll" (ByVal lOffset As Long, ByRef upValue As Long) As Long

'========= 로그 관련 함수 ==========================================================================================
' 현재 자동으로 설정됨.
' 설정 축의 함수 실행 결과를 EzSpy에서 모니터링 할 수 있도록 설정 또는 해제하는 함수이다.
' uUse : 사용 유무 => DISABLE Lib "AXL.dll" (0), ENABLE Lib "AXL.dll" (1)
Public Declare Function AxmLogSetAxis Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uUse As Long) As Long

' EzSpy에서의 설정 축 함수 실행 결과 모니터링 여부를 확인하는 함수이다.
Public Declare Function AxmLogGetAxis Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upUse As Long) As Long

'=========== 로그 출력 관련 함수
'지정한 입력 채널의 EzSpy에 로그 출력 여부를 설정한다.
Public Declare Function AxaiLogSetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal uUse As Long) As Long
'지정한 입력 채널의 EzSpy에 로그 출력 여부를 확인한다.
Public Declare Function AxaiLogGetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upUse As Long) As Long

'==지정한 출력 채널의 EzSpy 로그 출력
'지정한 출력 채널의 EzSpy에 로그 출력 여부를 설정한다.
Public Declare Function AxaoLogSetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal uUse As Long) As Long
'지정한 출력 채널의 EzSpy에 로그 출력 여부를 확인한다.
Public Declare Function AxaoLogGetChannel Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upUse As Long) As Long

'==Log
' 지정한 모듈의 EzSpy에 로그 출력 여부 설정
Public Declare Function AxdLogSetModule Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal uUse As Long) As Long
' 지정한 모듈의 EzSpy에 로그 출력 여부 확인
Public Declare Function AxdLogGetModule Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef upUse As Long) As Long

' 지정한 보드가 RTEX 모드일 때 그 보드의 firmware 버전을 확인한다.
Public Declare Function AxlGetFirmwareVersion Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal szVersion As String) As Long
' 지정한 보드로 Firmware를 전송 한다.
Public Declare Function AxlSetFirmwareCopy Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef wData As Long, ByRef wCmdData As Long) As Long
' 지정한 보드로 Firmware Update를 수행한다.
Public Declare Function AxlSetFirmwareUpdate Lib "AXL.dll" (ByVal lBoardNo As Long) As Long
' 지정한 보드의 현재 RTEX 초기화 상태를 확인 한다.
Public Declare Function AxlCheckStatus Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwStatus As Long) As Long
' 지정한 축에 RTEX Master board에 범용 명령을 실행 합니다.
Public Declare Function AxlRtexUniversalCmd Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wCmd As Long, ByVal wOffset As Long, ByRef wData As Long) As Long
' 지정한 축의 RTEX 통신 명령을 실행한다.
Public Declare Function AxmRtexSlaveCmd Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwCmdCode As Long, ByVal dwTypeCode As Long, ByVal dwIndexCode As Long, ByVal dwCmdConfigure As Long, ByVal dwValue As Long) As Long
' 지정한 축에 실행한 RTEX 통신 명령의 결과값을 확인한다.
Public Declare Function AxmRtexGetSlaveCmdResult Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwIndex As Long, ByRef dwValue As Long) As Long
' 지정한 축에 RTEX 상태 정보를 확인한다.
Public Declare Function AxmRtexGetAxisStatus Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwStatus As Long) As Long
' 지정한 축에 RTEX 통신 리턴 정보를 확인한다. Lib "AXL.dll" (Actual position, Velocity, Torque)
Public Declare Function AxmRtexGetAxisReturnData Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwReturn1 As Long, ByRef dwReturn2 As Long, ByRef dwReturn3 As Long) As Long
' 지정한 축에 RTEX Slave 축의 현재 상태 정보를 확인한다. Lib "AXL.dll" (mechanical, Inposition and etc)
Public Declare Function AxmRtexGetAxisSlaveStatus Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwStatus As Long) As Long

' 지정한 축에 MLII Slave 축에 범용 네트웍 명령어를 기입한다.
Public Declare Function AxmSetAxisCmd Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef tagCommand As Long) As Long
' 지정한 축에 MLII Slave 축에 범용 네트웍 명령의 결과를 확인한다.
Public Declare Function AxmGetAxisCmdResult Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef tagCommand As Long) As Long

Public Declare Function AxlGetDpRamData Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wAddress As Long, ByRef dwpRdData As Long) As Long
Public Declare Function AxlBoardReadDpramWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByRef dwpRdData As Long) As Long

Public Declare Function AxlSetSendBoardCommand Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwCommand As Long, ByRef dwpSendData As Long, ByVal dwLength As Long) As Long
Public Declare Function AxlGetResponseBoardCommand Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwpReadData As Long) As Long

' Network Type Master 보드에서 Slave 들의 Firmware Version을 읽어 오는 함수.
' ucaFirmwareVersion unsigned char 형의 Array로 선언하고 크기가 4이상이 되도록 선언 해야 한다.
Public Declare Function AxmInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef ucaFirmwareVersion As Long) As Long
Public Declare Function AxaInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef ucaFirmwareVersion As Long) As Long
Public Declare Function AxdInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef ucaFirmwareVersion As Long) As Long

'======== PCI-R1604-MLII 전용 함수=========================================================================== 
' INTERPOLATE and LATCH Command의 Option Field의 Torq Feed Forward의 값을 설정 하도록 합니다.
' 기본값은 MAX로 설정되어 있습니다.
' 설정값은 0 ~ 4000H까지 설정 할 수 있습니다.
' 설정값은 4000H이상으로 설정하면 설정은 그 이상으로 설정되나 동작은 4000H값이 적용 됩니다.
Public Declare Function  AxmSetTorqFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwTorqFeedForward As Long) As Long

' INTERPOLATE and LATCH Command의 Option Field의 Torq Feed Forward의 값을 읽어오는 함수 입니다.
' 기본값은 MAX로 설정되어 있습니다.
Public Declare Function  AxmGetTorqFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpTorqFeedForward As Long) As Long

' INTERPOLATE and LATCH Command의 VFF Field의 Velocity Feed Forward의 값을 설정 하도록 합니다.
' 기본값은 '0'로 설정되어 있습니다.
' 설정값은 0 ~ FFFFH까지 설정 할 수 있습니다.
Public Declare Function  AxmSetVelocityFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwVelocityFeedForward As Long) As Long

' INTERPOLATE and LATCH Command의 VFF Field의 Velocity Feed Forward의 값을 읽어오는 함수 입니다.
Public Declare Function  AxmGetVelocityFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpVelocityFeedForward As Long) As Long

' Encoder type을 설정한다.
' 기본값은 0(TYPE_INCREMENTAL)로 설정되어 있습니다.
' 설정값은 0 ~ 1까지 설정 할 수 있습니다.
' 설정값 : 0(TYPE_INCREMENTAL), 1(TYPE_ABSOLUTE).
Public Declare Function AxmSignalSetEncoderType Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwEncoderType As Long) As Long

' Encoder type을 확인한다.
Public Declare Function AxmSignalGetEncoderType Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpEncoderType As Long) As Long
